// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/channel_list_row should show no results 1`] = `
<RCTScrollView
  ListEmptyComponent={[Function]}
  ListFooterComponent={[Function]}
  contentContainerStyle={
    {
      "flexGrow": 1,
    }
  }
  data={
    [
      {
        "data": [
          {
            "auth_service": "",
            "create_at": 1111,
            "delete_at": 0,
            "email": "john@doe.com",
            "first_name": "",
            "id": "1",
            "last_name": "",
            "locale": "",
            "nickname": "",
            "notify_props": {
              "channel": "true",
              "comments": "never",
              "desktop": "mention",
              "desktop_sound": "true",
              "email": "true",
              "first_name": "true",
              "highlight_keys": "",
              "mention_keys": "",
              "push": "mention",
              "push_status": "away",
            },
            "position": "",
            "roles": "",
            "update_at": 1111,
            "username": "johndoe",
          },
        ],
        "first": true,
        "id": "J",
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  initialNumToRender={15}
  keyExtractor={[Function]}
  keyboardDismissMode="on-drag"
  keyboardShouldPersistTaps="always"
  maxToRenderPerBatch={16}
  onContentSizeChange={[Function]}
  onEndReached={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  removeClippedSubviews={true}
  renderItem={[Function]}
  scrollEventThrottle={60}
  stickyHeaderIndices={[]}
  style={
    {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
  testID="UserListRow.section_list"
>
  <View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          {
            "backgroundColor": "#ffffff",
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "rgba(63,67,80,0.08)",
              "height": 24,
              "justifyContent": "center",
              "paddingLeft": 16,
            }
          }
        >
          <Text
            style={
              {
                "color": "#3f4350",
                "fontFamily": "OpenSans-SemiBold",
                "fontSize": 12,
                "fontWeight": "600",
                "lineHeight": 16,
              }
            }
          >
            J
          </Text>
        </View>
      </View>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onLayout={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            [
              [
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "height": 40,
                  "paddingBottom": 8,
                  "paddingTop": 4,
                },
                {
                  "opacity": 1,
                  "paddingHorizontal": 20,
                },
                undefined,
              ],
              undefined,
            ]
          }
          testID="create_direct_message.user_list.user_item.1.1"
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "justifyContent": "center",
                },
                {
                  "height": 24,
                  "width": 24,
                },
                {
                  "marginRight": 12,
                },
              ]
            }
            testID="create_direct_message.user_list.user_item.1.1.profile_picture"
          >
            <Icon
              name="account-outline"
              size={24}
              style={
                {
                  "color": "rgba(63,67,80,0.48)",
                }
              }
            />
          </View>
          <View
            style={
              {
                "flex": 1,
              }
            }
          >
            <View
              style={
                {
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <Text
                numberOfLines={1}
                style={
                  {
                    "color": "#3f4350",
                    "flex": 0,
                    "flexShrink": 1,
                    "fontFamily": "OpenSans",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                  }
                }
                testID="create_direct_message.user_list.user_item.1.1.display_name"
              >
                johndoe
              </Text>
              <View
                style={
                  {
                    "flex": 1,
                  }
                }
              />
              <View
                style={
                  {
                    "alignItems": "center",
                    "justifyContent": "center",
                    "marginLeft": 12,
                  }
                }
              >
                <Icon
                  color="rgba(63,67,80,0.32)"
                  name="circle-outline"
                  size={28}
                />
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    />
    <View
      onLayout={[Function]}
    >
      <View
        style={
          {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <ActivityIndicator
          color="#1c58d9"
          size="large"
        />
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`components/channel_list_row should show results and tutorial 1`] = `
<RCTScrollView
  ListEmptyComponent={[Function]}
  ListFooterComponent={[Function]}
  contentContainerStyle={
    {
      "flexGrow": 1,
    }
  }
  data={
    [
      {
        "data": [
          {
            "auth_service": "",
            "create_at": 1111,
            "delete_at": 0,
            "email": "john@doe.com",
            "first_name": "",
            "id": "1",
            "last_name": "",
            "locale": "",
            "nickname": "",
            "notify_props": {
              "channel": "true",
              "comments": "never",
              "desktop": "mention",
              "desktop_sound": "true",
              "email": "true",
              "first_name": "true",
              "highlight_keys": "",
              "mention_keys": "",
              "push": "mention",
              "push_status": "away",
            },
            "position": "",
            "roles": "",
            "update_at": 1111,
            "username": "johndoe",
          },
        ],
        "first": true,
        "id": "J",
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  initialNumToRender={15}
  keyExtractor={[Function]}
  keyboardDismissMode="on-drag"
  keyboardShouldPersistTaps="always"
  maxToRenderPerBatch={16}
  onContentSizeChange={[Function]}
  onEndReached={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  removeClippedSubviews={true}
  renderItem={[Function]}
  scrollEventThrottle={60}
  stickyHeaderIndices={[]}
  style={
    {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
  testID="UserListRow.section_list"
>
  <View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          {
            "backgroundColor": "#ffffff",
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "rgba(63,67,80,0.08)",
              "height": 24,
              "justifyContent": "center",
              "paddingLeft": 16,
            }
          }
        >
          <Text
            style={
              {
                "color": "#3f4350",
                "fontFamily": "OpenSans-SemiBold",
                "fontSize": 12,
                "fontWeight": "600",
                "lineHeight": 16,
              }
            }
          >
            J
          </Text>
        </View>
      </View>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onLayout={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            [
              [
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "height": 40,
                  "paddingBottom": 8,
                  "paddingTop": 4,
                },
                {
                  "opacity": 1,
                  "paddingHorizontal": 20,
                },
                undefined,
              ],
              undefined,
            ]
          }
          testID="create_direct_message.user_list.user_item.1.1"
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "justifyContent": "center",
                },
                {
                  "height": 24,
                  "width": 24,
                },
                {
                  "marginRight": 12,
                },
              ]
            }
            testID="create_direct_message.user_list.user_item.1.1.profile_picture"
          >
            <Icon
              name="account-outline"
              size={24}
              style={
                {
                  "color": "rgba(63,67,80,0.48)",
                }
              }
            />
          </View>
          <View
            style={
              {
                "flex": 1,
              }
            }
          >
            <View
              style={
                {
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <Text
                numberOfLines={1}
                style={
                  {
                    "color": "#3f4350",
                    "flex": 0,
                    "flexShrink": 1,
                    "fontFamily": "OpenSans",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                  }
                }
                testID="create_direct_message.user_list.user_item.1.1.display_name"
              >
                johndoe
              </Text>
              <View
                style={
                  {
                    "flex": 1,
                  }
                }
              />
              <View
                style={
                  {
                    "alignItems": "center",
                    "justifyContent": "center",
                    "marginLeft": 12,
                  }
                }
              >
                <Icon
                  color="rgba(63,67,80,0.32)"
                  name="circle-outline"
                  size={28}
                />
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    />
    <View
      onLayout={[Function]}
    >
      <View
        style={
          {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <ActivityIndicator
          color="#1c58d9"
          size="large"
        />
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`components/channel_list_row should show results no tutorial 1`] = `
<RCTScrollView
  ListEmptyComponent={[Function]}
  ListFooterComponent={[Function]}
  contentContainerStyle={
    {
      "flexGrow": 1,
    }
  }
  data={
    [
      {
        "data": [
          {
            "auth_service": "",
            "create_at": 1111,
            "delete_at": 0,
            "email": "john@doe.com",
            "first_name": "",
            "id": "1",
            "last_name": "",
            "locale": "",
            "nickname": "",
            "notify_props": {
              "channel": "true",
              "comments": "never",
              "desktop": "mention",
              "desktop_sound": "true",
              "email": "true",
              "first_name": "true",
              "highlight_keys": "",
              "mention_keys": "",
              "push": "mention",
              "push_status": "away",
            },
            "position": "",
            "roles": "",
            "update_at": 1111,
            "username": "johndoe",
          },
        ],
        "first": true,
        "id": "J",
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  initialNumToRender={15}
  keyExtractor={[Function]}
  keyboardDismissMode="on-drag"
  keyboardShouldPersistTaps="always"
  maxToRenderPerBatch={16}
  onContentSizeChange={[Function]}
  onEndReached={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  removeClippedSubviews={true}
  renderItem={[Function]}
  scrollEventThrottle={60}
  stickyHeaderIndices={[]}
  style={
    {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
  testID="UserListRow.section_list"
>
  <View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          {
            "backgroundColor": "#ffffff",
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "rgba(63,67,80,0.08)",
              "height": 24,
              "justifyContent": "center",
              "paddingLeft": 16,
            }
          }
        >
          <Text
            style={
              {
                "color": "#3f4350",
                "fontFamily": "OpenSans-SemiBold",
                "fontSize": 12,
                "fontWeight": "600",
                "lineHeight": 16,
              }
            }
          >
            J
          </Text>
        </View>
      </View>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onLayout={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            [
              [
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "height": 40,
                  "paddingBottom": 8,
                  "paddingTop": 4,
                },
                {
                  "opacity": 1,
                  "paddingHorizontal": 20,
                },
                undefined,
              ],
              undefined,
            ]
          }
          testID="create_direct_message.user_list.user_item.1.1"
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "justifyContent": "center",
                },
                {
                  "height": 24,
                  "width": 24,
                },
                {
                  "marginRight": 12,
                },
              ]
            }
            testID="create_direct_message.user_list.user_item.1.1.profile_picture"
          >
            <Icon
              name="account-outline"
              size={24}
              style={
                {
                  "color": "rgba(63,67,80,0.48)",
                }
              }
            />
          </View>
          <View
            style={
              {
                "flex": 1,
              }
            }
          >
            <View
              style={
                {
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <Text
                numberOfLines={1}
                style={
                  {
                    "color": "#3f4350",
                    "flex": 0,
                    "flexShrink": 1,
                    "fontFamily": "OpenSans",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                  }
                }
                testID="create_direct_message.user_list.user_item.1.1.display_name"
              >
                johndoe
              </Text>
              <View
                style={
                  {
                    "flex": 1,
                  }
                }
              />
              <View
                style={
                  {
                    "alignItems": "center",
                    "justifyContent": "center",
                    "marginLeft": 12,
                  }
                }
              >
                <Icon
                  color="rgba(63,67,80,0.32)"
                  name="circle-outline"
                  size={28}
                />
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    />
    <View
      onLayout={[Function]}
    >
      <View
        style={
          {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <ActivityIndicator
          color="#1c58d9"
          size="large"
        />
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`components/channel_list_row should show results no tutorial 2 users 1`] = `
<RCTScrollView
  ListEmptyComponent={[Function]}
  ListFooterComponent={[Function]}
  contentContainerStyle={
    {
      "flexGrow": 1,
    }
  }
  data={
    [
      {
        "data": [
          {
            "auth_service": "",
            "create_at": 1111,
            "delete_at": 0,
            "email": "john@doe.com",
            "first_name": "",
            "id": "1",
            "last_name": "",
            "locale": "",
            "nickname": "",
            "notify_props": {
              "channel": "true",
              "comments": "never",
              "desktop": "mention",
              "desktop_sound": "true",
              "email": "true",
              "first_name": "true",
              "highlight_keys": "",
              "mention_keys": "",
              "push": "mention",
              "push_status": "away",
            },
            "position": "",
            "roles": "",
            "update_at": 1111,
            "username": "johndoe",
          },
        ],
        "first": true,
        "id": "J",
      },
      {
        "data": [
          {
            "auth_service": "",
            "create_at": 1111,
            "delete_at": 0,
            "email": "rocky@doe.com",
            "first_name": "",
            "id": "2",
            "last_name": "",
            "locale": "",
            "nickname": "",
            "notify_props": {
              "channel": "true",
              "comments": "never",
              "desktop": "mention",
              "desktop_sound": "true",
              "email": "true",
              "first_name": "true",
              "highlight_keys": "",
              "mention_keys": "",
              "push": "mention",
              "push_status": "away",
            },
            "position": "",
            "roles": "",
            "update_at": 1111,
            "username": "rocky",
          },
        ],
        "first": false,
        "id": "R",
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  initialNumToRender={15}
  keyExtractor={[Function]}
  keyboardDismissMode="on-drag"
  keyboardShouldPersistTaps="always"
  maxToRenderPerBatch={16}
  onContentSizeChange={[Function]}
  onEndReached={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  removeClippedSubviews={true}
  renderItem={[Function]}
  scrollEventThrottle={60}
  stickyHeaderIndices={[]}
  style={
    {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
  testID="UserListRow.section_list"
>
  <View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          {
            "backgroundColor": "#ffffff",
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "rgba(63,67,80,0.08)",
              "height": 24,
              "justifyContent": "center",
              "paddingLeft": 16,
            }
          }
        >
          <Text
            style={
              {
                "color": "#3f4350",
                "fontFamily": "OpenSans-SemiBold",
                "fontSize": 12,
                "fontWeight": "600",
                "lineHeight": 16,
              }
            }
          >
            J
          </Text>
        </View>
      </View>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onLayout={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            [
              [
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "height": 40,
                  "paddingBottom": 8,
                  "paddingTop": 4,
                },
                {
                  "opacity": 1,
                  "paddingHorizontal": 20,
                },
                undefined,
              ],
              undefined,
            ]
          }
          testID="create_direct_message.user_list.user_item.1.1"
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "justifyContent": "center",
                },
                {
                  "height": 24,
                  "width": 24,
                },
                {
                  "marginRight": 12,
                },
              ]
            }
            testID="create_direct_message.user_list.user_item.1.1.profile_picture"
          >
            <Icon
              name="account-outline"
              size={24}
              style={
                {
                  "color": "rgba(63,67,80,0.48)",
                }
              }
            />
          </View>
          <View
            style={
              {
                "flex": 1,
              }
            }
          >
            <View
              style={
                {
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <Text
                numberOfLines={1}
                style={
                  {
                    "color": "#3f4350",
                    "flex": 0,
                    "flexShrink": 1,
                    "fontFamily": "OpenSans",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                  }
                }
                testID="create_direct_message.user_list.user_item.1.1.display_name"
              >
                johndoe
              </Text>
              <View
                style={
                  {
                    "flex": 1,
                  }
                }
              />
              <View
                style={
                  {
                    "alignItems": "center",
                    "justifyContent": "center",
                    "marginLeft": 12,
                  }
                }
              >
                <Icon
                  color="rgba(63,67,80,0.32)"
                  name="circle-outline"
                  size={28}
                />
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    />
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          {
            "backgroundColor": "#ffffff",
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "rgba(63,67,80,0.08)",
              "height": 24,
              "justifyContent": "center",
              "paddingLeft": 16,
            }
          }
        >
          <Text
            style={
              {
                "color": "#3f4350",
                "fontFamily": "OpenSans-SemiBold",
                "fontSize": 12,
                "fontWeight": "600",
                "lineHeight": 16,
              }
            }
          >
            R
          </Text>
        </View>
      </View>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onLayout={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            [
              [
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "height": 40,
                  "paddingBottom": 8,
                  "paddingTop": 4,
                },
                {
                  "opacity": 1,
                  "paddingHorizontal": 20,
                },
                undefined,
              ],
              undefined,
            ]
          }
          testID="create_direct_message.user_list.user_item.2.2"
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "justifyContent": "center",
                },
                {
                  "height": 24,
                  "width": 24,
                },
                {
                  "marginRight": 12,
                },
              ]
            }
            testID="create_direct_message.user_list.user_item.2.2.profile_picture"
          >
            <Icon
              name="account-outline"
              size={24}
              style={
                {
                  "color": "rgba(63,67,80,0.48)",
                }
              }
            />
          </View>
          <View
            style={
              {
                "flex": 1,
              }
            }
          >
            <View
              style={
                {
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <Text
                numberOfLines={1}
                style={
                  {
                    "color": "#3f4350",
                    "flex": 0,
                    "flexShrink": 1,
                    "fontFamily": "OpenSans",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                  }
                }
                testID="create_direct_message.user_list.user_item.2.2.display_name"
              >
                rocky
              </Text>
              <View
                style={
                  {
                    "flex": 1,
                  }
                }
              />
              <View
                style={
                  {
                    "alignItems": "center",
                    "justifyContent": "center",
                    "marginLeft": 12,
                  }
                }
              >
                <Icon
                  color="rgba(63,67,80,0.32)"
                  name="circle-outline"
                  size={28}
                />
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    />
    <View
      onLayout={[Function]}
    >
      <View
        style={
          {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <ActivityIndicator
          color="#1c58d9"
          size="large"
        />
      </View>
    </View>
  </View>
</RCTScrollView>
`;
